Kubernetes/todoapp.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp
  labels: 
    app: todoapp
spec:
  type: ClusterIP
  selector:
    app: todoapp
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
