Kubernetes/todoapp.trafficsplit.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: todoapp-v1
  namespace: todoapp
  labels: 
    app: todoapp-v1
spec:
  type: ClusterIP
  selector:
    app: todoapp
  ports:
  - name: http
    port: 8080
    targetPort: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: todoapp-v2
  namespace: todoapp
  labels: 
    app: todoapp-v2
spec:
  type: ClusterIP
  selector:
    app: todoapp-v2
  ports:
  - name: http
    port: 8080
    targetPort: 80
    protocol: TCP
