Kubernetes/todoapp.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - $INGRESS_FQDN
    secretName: todo-tls
  rules:
  - host: $INGRESS_FQDN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todoapp
            port:
              number: 8080
  ingressClassName: app-public
